# ci-cd-test

./: .gitignore  docker-compose.yml
.github/workflows/: deploy.yml
aiogram_youtube/: Dockerfile  base_settings.py  main.py  pyproject.toml
aiogram_youtube/grpc_utils/: serve.py
aiogram_youtube/handlers/admin/: admin_router.py
backend/: Dockerfile  main.py  pyproject.toml
backend/examples/bid_ex/: client.py
backend/examples/proto_ex/: client.py  ex.proto  ex_pb2.py  ex_pb2_grpc.py  server.py
backend/grpc_utils/: server.py
backend/grpc_utils/proto/: bid.proto  bid_pb2.py  bid_pb2_grpc.py
backend/grpc_utils/proto_ws/: server.py  ws_pb2.py
backend/redis_utils/: RedisManager.py
backend/router/: schemas.py  user_router.py
backend/user/: schemas.py  user_router.py
backend/utils/: Publisher.py  Publisher_meta.py  Reporter.py
backend/youtube/: schemas.py  youtube_router.py
forntend/: .env  Dockerfile  package-lock.json
forntend/src/pages/Main/: Main.jsx
frontend/: Dockerfile  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  types.d.ts
frontend/src/app/api/: axiosCreate.ts  getData.ts
frontend/src/app/redux/: store.ts
frontend/src/feature/hooks/: isValidYouTubeUrl.ts  (+1 more)
nginx/: Dockerfile  nginx.conf
pyrobot/: AsyncQueue.py  Dockerfile  base_settings.py  main.py  pyproject.toml  test.py  utils.py
pyrobot/grpc_utils/proto_ws/: server.py  ws.proto  ws_pb2_grpc.py
pyrobot/grpc_utils/to_fast/: bid.proto  bid_pb2.py  bid_pb2_grpc.py  server.py
(+26 files in other folders)
