[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["develophub <mixan_45@mail.ru>"]
#readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
fastapi = "^0.115.6"
betterlogging = "^1.0.0"
websocket = "^0.2.1"
grpcio = "^1.69.0"
grpcio-tools = "^1.69.0"
redis = "^5.2.1"
httpx = "^0.28.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
